Fixed: wflow-consoleweb - Userview - Popup Dialog show double scrollbar sometime. @5.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/userview.css
+++ b/wflow-consoleweb/src/main/webapp/css/userview.css
@@ -227,3 +227,4 @@ body .ui-widget-overlay {
 input[type="button"], input[type="submit"], input[type="reset"] {
   -webkit-appearance: button;
 }
+#jqueryDialogDiv {overflow: hidden;}
