--- a/wflow-consoleweb/src/main/webapp/css/userview_v5.css
+++ b/wflow-consoleweb/src/main/webapp/css/userview_v5.css
@@ -103,3 +103,4 @@ input[type="button"], input[type="submit"], input[type="reset"] {
 a {
     cursor: pointer;
 }
+#jqueryDialogDiv {overflow: hidden;}
